<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.httpdemo.activity.LoginOrRegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"/>

    <EditText
        android:id="@+id/number_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:singleLine="true"
        android:ems="10"
        android:hint="@string/numberPhone"
        android:inputType="number"
        />

    <LinearLayout
        android:id="@+id/linear_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/number_editText">
        <EditText
            android:id="@+id/password_editText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="numberPassword"
            />
        <TextView
            android:id="@+id/notremeber_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NotRemeber"
            android:textColor="@color/red"
            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/register_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear_pass">
        <EditText
            android:id="@+id/SMS_editText"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textPersonName"
            android:hint="@string/SMSCode"
            />

        <Button
            android:id="@+id/SMS_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/button3"
            android:text="@string/sendSMS"
            />
    </LinearLayout>

    <Button
        android:id="@+id/bt_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_linear"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button3"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>
