<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/button_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_tv"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/red"
                android:textSize="80sp"
                android:id="@+id/everyday_share"
                android:gravity="center"
                android:background="@drawable/circle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/everyShare"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/red"
                android:textSize="80sp"
                android:id="@+id/recommend"
                android:gravity="center"
                android:background="@drawable/circle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/everyRecommend"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:textSize="80sp"
                android:textColor="@color/red"
                android:id="@+id/hot_song"
                android:gravity="center"
                android:background="@drawable/circle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/hotSong"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/line_tv"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/green"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.example.administrator.httpdemo.CustomView.WordView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_below="@+id/button_linear"/>

</RelativeLayout>


